# barodybroject

./: .cruft.json  .dockerignore  .env.example  .gitignore  ADMIN_CREDENTIALS_QUICKSTART.md  CHANGELOG.md  CMS_REMOVAL_GUIDE.md  CONTRIBUTING.md  CREDENTIALS_LOCATION.txt  DEPLOYMENT-GUIDE-MINIMAL.md  DEPLOYMENT-SUCCESS.md  DOCKER_BEFORE_AFTER.md  DOCKER_CONSOLIDATION_SUMMARY.md  DOCKER_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DONTREADME.md  Dockerfile  Dockerfile.old  Dockerfile.python  Gemfile  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_CHANGES.md  INFRASTRUCTURE_TEST_COMPLETION.md  MIGRATION_GUIDE.md  PRD.md  QUOTA_ISSUE_SOLUTIONS.md  README.md  STACK.md  TEMPLATE_IMPROVEMENTS.md  TODO.md  WORKFLOW_REVIEW_COMPLETE.md  _config.yml  apprunner.yaml  azure.yaml  debug_config.py  docker-compose.yml  frontmatter.json  init_setup.sh  migrate-docker-setup.sh  model_choices.json  (+10 more)
.devcontainer/: Dockerfile_dev  README.md  devcontainer.json  docker-compose_dev.yml
.frontmatter/: README.md
.frontmatter/database/: README.md
.github/: README.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md  feature_request_functional_requirements.md  feature_request_functional_test.md  feature_request_technical_requirements.md  feature_request_technical_tests.md  functional_requirements  issue_detail_template.md  issue_template.md
.github/agents/: DONTREADME.md  README.md  dontreadme.md  grokme.md  infra-tester.md  workflow-reviewer.md
.github/instructions/: README.md  bash.instructions.md  ci-cd.instructions.md  docs.instructions.md  documentation.instructions.md  features.instructions.md  frontmatter.standards.md  javascript.instructions.md  languages.instructions.md  markdown.instructions.md  mcp.instructions.md  posts.instructions.md  project.instructions.md  python.instructions.md  space.instructions.md  test.instructions.md  workflow.instructions.md  workflows.instructions.md
.github/prompts/: commit-publish.prompt.md
.github/scripts/: README.md  check-job-results.sh  ci-install-system-deps.sh  compose-validation.sh  deploy.sh  django-prechecks.sh  e2e-tests.sh  maintenance.sh  python-install.sh  quality.sh  run-pytest.sh
.github/workflows/: CHANGES_SUMMARY.md  README.md  WORKFLOW_FIXES.md  azure-dev.yml  ci.yml  close-outdated-issues.yml  container.yml  daily-evolution.yml  deploy.yml  devcontainer-ci.yml  docs.yml  environment.yml  format.yml  infrastructure-test.yml  jekyll-gh-pages.yml  main_barodybroject.yml  maintenance.yml  monthly-evolution-report.yml  openai-issue-processing.yml  openai-issue-processing.yml.yml  quality.yml  quarterly-major-evolution.yml  stale-issues.yml  tests.yml  weekly-health-check.yml
README/: README.md
README/.github/: README.md
README/docs/: README.md
README/src/: README.md
README/test/: README.md
archive/: Dockerfile.python  Dockerfile.ruby  README.md
assets/: README.md
assets/js/: content_detail.js
barodybroject/: settings.py  urls.py
docker-backup-20251026-221719/: docker-compose.prod.yml  docker-compose.yml
docs/: ADMIN_CREDENTIALS_SETUP.md  DJANGO_BOOTSTRAP5_MIGRATION.md  INFRASTRUCTURE_TESTING.md  INIT_SETUP_TEST_RESULTS.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  SECURITY_DOCUMENTATION.md  SETUP_SYSTEM_ENHANCEMENT_SUMMARY.md  TEST_SUMMARY.md  ci-cd-pipeline.md  infrastructure-test-report-20251031.md  infrastructure-test-summary.md  installation-wizard.md
docs/changelog/: CHANGELOG.md  CONTRIBUTING_CHANGES.md
docs/configuration/: README.md  admin-credentials.md  ecosystem-integration-config.md  environment-config.md  settings-optimization.md
docs/deployment/: DEPLOYMENT-SUCCESS.md  INFRASTRUCTURE_CHANGES.md  README.md
docs/features/: ecosystem-integration.md  instruction-harmonization.md
docs/migration/: CMS_REMOVAL_GUIDE.md  MIGRATION_GUIDE.md  README.md
docs/source/: conf.py  configuration.rst  contributing.rst  deployment.rst  index.rst  installation.rst  quickstart.rst  testing.rst
events/: README.md
features/: features.yml
githubai/: README.md  about.md
infra/: MIGRATION-MINIMAL-COST.md  README.md  main.bicep  main.bicep.minimal  main.parameters.json
infra/app/: README.md  db-postgres-minimal.bicep  db-postgres.bicep  src.bicep
infra/modules/: README.md  fetch-container-image.json
infra/shared/: README.md
logs/: readme-analysis-20251031_051026.csv  readme-analysis-20251031_051054.csv  readme-list-20251031_051026.txt
openai/: README.md  create_sub_issue.py
pages/_posts/: 2024-08-07-local-man-discovers-quantum-nonexistence-of-god,-still-attends-church-for-social-snacks.md  2024-08-09-quantum-nonexistence-of-god.md  2025-02-15-gamestop-jaws-unleashed-failure.md  2025-02-21-tests-real-life-escape-room.md
parodynews/: admin.py  apps.py  forms.py  main.py  mixins.py  models.py  resources.py  tests.py  urls.py  utils.py  views.py
parodynews/docs/: README.rst
parodynews/migrations/: 0001_initial.py  0002_assistant_remove_post_title_post_role.py  0003_post_prompt_alter_post_role.py
parodynews/schema/: content_detail_schema.json  news_article_schema.json  parody_news_article_schema.json  parody_prompt.md
parodynews/scripts/: create_jekyll_post.py  manage_content_test.py
parodynews/templates/: base.html  footer.html  login.html  object_template.html
posts/: 2025-02-14-fascinating-world-of-cats.md  2025-02-14-worlds-biggest-tandem-bike.md
scripts/: README.md  README.sh  add_current_ip_rule.py  azure-deployment-setup.py  build_docs.sh  generate-readmes.py  organize_docs.sh  organize_documentation.sh  setup-azure.sh  setup-deployment.sh  setup-examples.md  setup_aurora_serverless.py  test-infrastructure.sh  test-init-setup.sh  validate-cicd.sh  version-manager.sh
src/: .coveragerc  .dockerignore  .gitignore  .installation  .setup_config.json  Dockerfile  README.md  _config.yml  apprunner.yaml  azure.yaml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  gunicorn.conf.py  index.md  manage.py  pytest.ini  requirements-base.txt  requirements.txt
src/assets/: README.md
test/: README.md  TEST_INFRASTRUCTURE.md  test_demo.py
(+427 files in other folders)
